# zoho2gcal

./: .dockerignore  .env.example  .gitignore  .z2g-alert-state.json  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: crontab.example  entrypoint.sh  healthcheck.sh
docs/: publishing-docker-ghcr.md  synology-portainer.md
scripts/: sync_env.py
secrets/: README.md  private.env.example
src/z2g/: alerting.py  cli.py  config.py  google_auth.py  google_calendar.py  sync_diff.py  time_utils.py  transform.py  zoho_auth.py  zoho_calendar.py  zoho_oauth_exchange.py
tests/: test_alerting.py  test_config.py  test_smoke.py  test_sync_diff.py  test_time_utils.py  test_transform.py
